- Fixed minor issues including a problem with Ant's "findbugs" target.